--- a/AIML_Module_3_Lab_3_Using_KNN_for_Text_Classification_ipynb.ipynb
+++ b/AIML_Module_3_Lab_3_Using_KNN_for_Text_Classification_ipynb.ipynb
@@ -2189,6 +2189,19 @@
     {
       "cell_type": "markdown",
       "source": [
+        "1) TF-IDF tends to perform better than Bag-of-Words due to its ability to consider not only the frequency of terms in a document but also their importance in the corpus by considering inverse document frequency. This way, it gives more weight to terms that are more discriminative and less common across the corpus.\n",
+        "\n",
+        "2) Techniques such as word embeddings using models like Word2Vec, GloVe, or fastText are often considered better than both BoW and TF-IDF. They capture semantic relationships between words, preserve context, and offer richer representations for words.\n",
+        "\n",
+        "3) Stemming involves chopping off prefixes or suffixes of words to reduce them to their root form, which can sometimes result in the root not being an actual word. Lemmatization, on the other hand, maps words to their base or dictionary form, offering grammatically correct words but might require more computational resources. Stemming is faster but less accurate, while lemmatization is more accurate but slower."
+      ],
+      "metadata": {
+        "id": "ggM8CQ-u8nPW"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### Useful Resources for further reading\n",
         "1. Stemming and Lemmatization: https://nlp.stanford.edu/IR-book/html/htmledition/stemming-and-lemmatization-1.html\n",
         "2. TF-IDF and BoW : https://www.analyticsvidhya.com/blog/2020/02/quick-introduction-bag-of-words-bow-tf-idf/\n",
